If there's an X-QotM-Session header in the request, forward it on in the response. Also revamp the internals for a bit more consistency.

--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -14,7 +14,8 @@ spec:
     spec:
       containers:
       - name: qotm
-        image: datawire/qotm:1.0
+        image: datawire/qotm:1.1
+        imagePullPolicy: Always
         ports:
         - name: http-api 
           containerPort: 5000
