--- a/service.yaml
+++ b/service.yaml
@@ -1,1 +1,23 @@
 name: qotm
+
+profiles:
+  stable:
+    endpoint: /qotm/
+    max_memory: 0.5G
+    max_cpu: 0.5
+  canary:
+    name: {{branch.replace('/', '-')}}
+    endpoint: /qotm/
+    weight: 10.0 # percentage of traffic to route to this class of deployment
+    max_memory: 0.5G
+    max_cpu: 0.5G
+  default:
+    name: {{branch.replace('/', '-')}}
+    endpoint: /preview/{{branch}}/hello/
+    max_memory: 0.25G
+    max_cpu: 0.25
+
+branches:
+  master: stable
+  dev/*: default
+  canary/*: canary
