--- a/service.yaml
+++ b/service.yaml
@@ -2,18 +2,18 @@ name: qotm
 
 profiles:
   stable:
-    # endpoint: /qotm/
+    endpoint: /qotm/
     max_memory: 0.5G
     max_cpu: 0.5
   canary:
     name: {{branch.replace('/', '-')}}
-    # endpoint: /qotm/
+    endpoint: /qotm/
     weight: 10.0 # percentage of traffic to route to this class of deployment
     max_memory: 0.5G
     max_cpu: 0.5G
   default:
     name: {{branch.replace('/', '-')}}
-    # endpoint: /preview/{{branch}}/hello/
+    endpoint: /preview/{{branch}}/
     max_memory: 0.25G
     max_cpu: 0.25
 
