--- a/kubernetes/qotm-service.yaml
+++ b/kubernetes/qotm-service.yaml
@@ -3,10 +3,18 @@ apiVersion: v1
 kind: Service
 metadata:
   name: qotm
+  annotations:
+    getambassador.io/config: |
+      ---
+      apiVersion: ambassador/v0
+      kind:  Mapping
+      name:  qotm_mapping
+      prefix: /qotm/
+      service: qotm
 spec:
-  type: NodePort
   selector:
     app: qotm
   ports:
   - port: 80
+    name: http-qotm
     targetPort: http-api
