update deployment yaml

--- a/kubernetes/qotm-deployment.yaml
+++ b/kubernetes/qotm-deployment.yaml
@@ -11,13 +11,26 @@ spec:
     metadata:
       labels:
         app: qotm
+      annotations:
+        "consul.hashicorp.com/connect-inject": "false"
     spec:
       containers:
       - name: qotm
-        image: datawire/qotm:1.2
+        image: datawire/qotm:1.6
         ports:
         - name: http-api
           containerPort: 5000
+        env:
+        - name: REQUEST_LIMIT
+          value: "5"
+        - name: CONSUL_IP
+          valueFrom:
+            fieldRef:
+              fieldPath: status.hostIP
+        - name: POD_IP
+          valueFrom:
+            fieldRef:
+              fieldPath: status.podIP
         readinessProbe:
           httpGet:
             path: /health
